--- a/index.html
+++ b/index.html
@@ -1,53 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Interactive Model</title>
-  <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Interactive Model Comparison</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <div class="container">
-    <h1>Interactive Model</h1>
+    <div class="container">
+        <h1>Candidate Comparison</h1>
+        <div class="candidate-form">
+            <h2>Candidate 1</h2>
+            <form id="candidate1-form">
+                <label for="gender1">Gender:</label>
+                <select id="gender1">
+                    <option value="male">Male</option>
+                    <option value="female">Female</option>
+                </select>
 
-    <label for="confidence">Confidence (C)</label>
-    <input type="range" id="confidence" min="0" max="1" step="0.01">
-    <span id="confidenceValue">0</span>
+                <label for="confidence1">Confidence (α=0.8):</label>
+                <input type="range" id="confidence1" min="0" max="1" step="0.01" value="0.5">
 
-    <label for="alpha">Coefficient (α)</label>
-    <input type="range" id="alpha" min="0" max="1" step="0.01">
-    <span id="alphaValue">0</span>
+                <label for="empathy1">Empathy (β=1):</label>
+                <input type="range" id="empathy1" min="0" max="1" step="0.01" value="0.5">
 
-    <label for="empathy">Empathy (E)</label>
-    <input type="range" id="empathy" min="0" max="1" step="0.01">
-    <span id="empathyValue">0</span>
+                <label for="authenticity1">Authenticity (δ=0.9):</label>
+                <input type="range" id="authenticity1" min="0" max="1" step="0.01" value="0.5">
 
-    <label for="beta">Coefficient (β)</label>
-    <input type="range" id="beta" min="0" max="1" step="0.01">
-    <span id="betaValue">0</span>
+                <label for="determination1">Determination (γ=1):</label>
+                <input type="range" id="determination1" min="0" max="1" step="0.01" value="0.5">
 
-    <label for="authenticity">Authenticity (A)</label>
-    <input type="range" id="authenticity" min="0" max="1" step="0.01">
-    <span id="authenticityValue">0</span>
+                <button type="button" onclick="calculateImpressionScore('candidate1')">Calculate Score</button>
+            </form>
+            <p id="score1"></p>
+        </div>
 
-    <label for="gamma">Coefficient (γ)</label>
-    <input type="range" id="gamma" min="0" max="1" step="0.01">
-    <span id="gammaValue">0</span>
+        <div class="candidate-form">
+            <h2>Candidate 2</h2>
+            <form id="candidate2-form">
+                <label for="gender2">Gender:</label>
+                <select id="gender2">
+                    <option value="male">Male</option>
+                    <option value="female">Female</option>
+                </select>
 
-    <label for="determination">Determination (D)</label>
-    <input type="range" id="determination" min="0" max="1" step="0.01">
-    <span id="determinationValue">0</span>
+                <label for="confidence2">Confidence (α=0.8):</label>
+                <input type="range" id="confidence2" min="0" max="1" step="0.01" value="0.5">
 
-    <label for="delta">Coefficient (δ)</label>
-    <input type="range" id="delta" min="0" max="1" step="0.01">
-    <span id="deltaValue">0</span>
+                <label for="empathy2">Empathy (β=1):</label>
+                <input type="range" id="empathy2" min="0" max="1" step="0.01" value="0.5">
 
-    <button id="updateGraph">Update Graph</button>
+                <label for="authenticity2">Authenticity (δ=0.9):</label>
+                <input type="range" id="authenticity2" min="0" max="1" step="0.01" value="0.5">
 
-    <canvas id="myChart" width="400" height="400"></canvas>
-  </div>
+                <label for="determination2">Determination (γ=1):</label>
+                <input type="range" id="determination2" min="0" max="1" step="0.01" value="0.5">
 
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-  <script src="script.js"></script>
+                <button type="button" onclick="calculateImpressionScore('candidate2')">Calculate Score</button>
+            </form>
+            <p id="score2"></p>
+        </div>
+
+        <button type="button" onclick="compareScores()">Compare Candidates</button>
+        <p id="comparison-result"></p>
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
